# phase_optimizer

./: .gitignore  CLAUDE.md  DEPLOY.md  README.md  batch_processor.py  deploy_to_server.sh  optics_utils.py  phase_generators.py  phase_optimizer_gui.py  pyproject.server.toml  pyproject.toml  req.md  test_slm_optimizer.ipynb  test_utils.py  visualization.py
config/: base.json  base_M5.json  databrowser_gui_state.json  gui_state.json
config/0226config/: M5_2.2u_415_f75_overlap0.9.json  M5_4.4u_415_f75_overlap0.9.json  M7_2.2u_415_f75_overlap0.9.json  M7_4.4u_415_f75_overlap0.9.json  M9_4.4u_415_f100_4x.json  M9_4.4u_415_f100_overlap0.9_random0.15.json  M9_4.4u_415_f75_4x.json  M9_4.4u_415_f75_over1.0.json  M9_4.4u_415_f75_over1.0_random0.15.json
config/crop_configs/: M5_rand.json  M5_std.json  M7_rand.json  M7_std.json  M9_rand.json  M9_std.json  mask_config_M9_std.json
notebooks/: test_slm_optimizer.ipynb
phase_optimizer/: __init__.py  batch_processor.py  config.py  visualization.py
phase_optimizer/core/: __init__.py  optics_utils.py  phase_generator.py  wave_propagation.py
phase_optimizer/gui/: __init__.py  file_selector.py  optimizer_gui.py  test_gui.py
tests/: test_checkpoint_gradient.py
