[project]
name = "slm-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "ipython>=9.6.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "natsort>=8.4.0",
    "numpy>=2.3.3",
    "scipy>=1.16.2",
    "torch>=2.8.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
